# chatbot

./: .env  cafeteria.txt  main.py  pyproject.toml
especialidad/: laorquidea_v2.txt
