[project]
name = "chatbot-especializado"
version = "0.1.0"
description = "Chatbot RAG Multidocumento con DeepSeek y FAISS"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "gradio>=6.14.0",
    "langchain>=1.3.1",
    "langchain-community>=0.0.30",
    "faiss-cpu>=1.8.0",
    "langchain-openai>=1.2.2",
    "langchain-huggingface>=1.2.2",
    "langchain-text-splitters>=1.1.2",
    "pypdf>=6.12.1",
    "python-dotenv>=1.2.2",
    "sentence-transformers>=5.5.1",
]
