[project]
name = "chatbot-especializado"
version = "0.1.0"
description = "Chatbot RAG Multidocumento optimizado para Render"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "gradio>=5.0.0",
    "langchain>=0.3.0",
    "langchain-community>=0.3.0",
    "langchain-huggingface>=0.1.0",
    "sentence-transformers>=3.0.0",
    "faiss-cpu>=1.8.0",
    "langchain-openai>=0.2.0",
    "langchain-text-splitters>=0.3.0",
    "pypdf>=5.0.0",
    "python-dotenv>=1.0.1",
]
